# graph-theoretic-applications-in-insurance-risk-management

./: .gitignore  GTAIRM_0.ipynb  LICENSE  NOTICE  README.md  download_sec.py  pyproject.toml  requirements.txt  upload_to_hub.py
docs/: methodology.md
notebooks/: edgar_exposure_pipeline.ipynb
src/: GTAIRM_0.ipynb
src/edgar_exposure/: __init__.py  graph.py  loader.py  metrics.py  sections.py  viz.py
tests/: test_pipeline.py
